Tue Dec 31 15:44:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (RbConfig): expand RUBY_SO_NAME for extensions
	  backward compatibility.  [ruby-core:59426] [Bug #9329]

Mon Dec 30 23:33:07 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* variable.c: [DOC] adding extra example in docs.
	  patched by Steve Klabnik. [Bug #9210]

Mon Dec 30 18:34:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (must_encindex, rb_enc_from_index, rb_obj_encoding): mask
	  encoding index and ignore dummy flags.  [ruby-core:59354] [Bug #9314]

Mon Dec 30 16:11:52 2013  WATANABE Hirofumi  <eban@ruby-lang.org>

	* tool/make-snapshot: needs CXXFLAGS.  [ruby-core:59393][Bug #9320]

Sun Dec 29 18:36:54 2013  Shota Fukumori  <her@sorah.jp>

	* lib/mkmf.rb (configuration): Make CXXFLAGS customizable.
	  Patch by Kohei Suzuki (eagletmt). [Fixes GH-492]

Sun Dec 29 12:11:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew_from_me): keep iclass as-is, to make inheritance
	  chain consistent.  [ruby-core:59358] [Bug #9315]

	* proc.c (method_owner): return the original defined_class from
	  prepended iclass, instead.

Sun Dec 29 08:47:24 2013  Lucas Allan Amorim  <lucas.allan@gmail.com>

	* test/ruby/test_sprintf.rb (test_hash): Added tests for sprintf
	  with a hash as parameter.  [Fixes GH-491]

Sun Dec 29 07:27:51 2013  Benoit Daloze  <eregontp@gmail.com>

	* compar.c (cmp_eq_recursive): Fix the return value, the value for
	  failed #<=> should be nil. It was raising a NoMethodError for
	  the test case TestComparable#test_no_cmp (undefined method `>'
	  for false:FalseClass). Yet one more reason for #7688.

Sat Dec 28 22:21:59 2013  Benoit Daloze  <eregontp@gmail.com>

	* object.c (Kernel#<=>) surround Comparable operators with <code> tags.
	  The #== method was hidden in ri/rdoc's output and was highlighting
	  the line instead.

Sat Dec 28 17:24:00 2013  DV Suresh  <e@dvsuresh.me>

	* benchmark/bm_so_meteor_contest.rb: [DOC] Fix a few typos